--- a/.github/workflows/compilar.yml
+++ b/.github/workflows/compilar.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispach:
+  workflow_dispatch:
 
 jobs:
   build_test:
